# poke

./: .gitignore  CMakeLists.txt  copy_pokemon.py  devenv.nix  pixi.toml  rename_params.py
scripts/: cubical_arithmetic.py  cubical_pairings.py  ec_params_pokemon.py  precompute_endomorphism_action_pokemon.sage  precompute_sizes_pokemon.sage  precompute_torsion_constants_pokemon.sage  test_cubical.py  utilities.py
src/ec/ref/ecx/test/: biextension-test.c
src/ec/ref/pokemon_lvl1/test/: CMakeLists.txt
src/gf/ref/gfx/: mp.c
src/gf/ref/pokemon_lvl1/: CMakeLists.txt  fp_p295.c
src/gf/ref/pokemon_lvl3/: CMakeLists.txt  fp_p449.c
src/gf/ref/pokemon_lvl5/: CMakeLists.txt  fp_p587.c
src/hd/ref/hdx/: theta_isogenies.c
src/id2iso/ref/pokemon_lvl1/test/: CMakeLists.txt
src/intbig/ref/generic/: CMakeLists.txt
src/poke/ref/: CMakeLists.txt
src/poke/ref/include/: pokemon.h
src/poke/ref/pokemon_lvl1/: CMakeLists.txt
src/poke/ref/pokemonx/: pokemon.c
src/precomp/ref/pike_lvl1/: torsion_constants.c
src/precomp/ref/pike_lvl3/: torsion_constants.c
src/precomp/ref/pike_lvl5/: torsion_constants.c
src/precomp/ref/pokemon_lvl1/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  poke_parameters.txt  quaternion_data.c  torsion_constants.c
src/precomp/ref/pokemon_lvl3/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  poke_parameters.txt  quaternion_data.c  torsion_constants.c
src/precomp/ref/pokemon_lvl5/: CMakeLists.txt  endomorphism_action.c  gf_constants.c  poke_parameters.txt  quaternion_data.c  torsion_constants.c
(+22 files in other folders)
